# e-wallet

./: .codeclimate.yml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  ci.yml
backend/app/: __init__.py  settings.py  urls.py
backend/django_extended/: constants.py  serializers.py  swagger_view.py
backend/faustapp/: app.py  apps.py  producer.py
backend/users/: managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_role.py
backend/wallets/: agents.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/wallets/migrations/: 0001_initial.py
backend/wallets/serializers/: transaction_serialziers.py  wallet_serializers.py
tests/: conftest.py
tests/users/: factories.py
tests/users/views/: test_user_create.py  test_user_login.py  test_user_logout.py
tests/wallets/: factories.py
tests/wallets/models/: test_transaction.py  test_wallet.py
tests/wallets/views/: test_transaction_list_create.py  test_transaction_retrieve_update_destroy.py  test_wallet_balance.py  test_wallet_list_create.py  test_wallet_retrieve_update_destroy.py
