[tool.poetry]
name = "e-wallet"
version = "0.1.0"
description = ""
authors = ["greatlaki <greatlaki911@gmail.com>"]
readme = "README.md"
packages = [{include = "e_wallet"}]

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
pytest = "^7.3.2"
psycopg2-binary = "^2.9.6"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
mypy = "^1.4.0"
install = "^1.3.5"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = "backend"
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
