[tool.poetry]
name = "e-wallet"
version = "0.1.0"
description = ""
authors = ["greatlaki <greatlaki911@gmail.com>"]
readme = "README.md"
packages = [{include = "e_wallet"}]

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
pytest = "^7.3.2"
psycopg2-binary = "^2.9.6"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
install = "^1.3.5"
pre-commit = "^3.3.3"
drf-yasg = "^1.21.6"
redis = "^4.6.0"
ruff = "^0.0.280"
pytest-cov = "^4.1.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
faust-streaming = "^0.10.15"
confluent-kafka = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = "backend"
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.black]
line-length = 120
exclude = ".venv /static/*"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
no_warn_no_return = true
show_column_numbers = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    "*/migrations/*",
    "*/static/*",
    ".venv",
    "__init__.py"
]
ignore = ["B904"]
select = ["B","C","E","F","W","T"]

[tool.ruff.mccabe]
max-complexity = 18
